<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxEms="15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rg_unit"
        app:layout_constraintStart_toStartOf="@id/btn_find_weather"
        app:layout_constraintEnd_toEndOf="@id/btn_find_weather">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_city"
            android:layout_width="match_parent"
            android:backgroundTint="@color/gray"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/enter_city_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_find_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieve_city_weather"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/rg_unit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/rg_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_city"
        app:layout_constraintBottom_toTopOf="@id/btn_find_weather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_unit"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <RadioButton
            android:id="@+id/rb_fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/rb_kelvin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kelvin"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>